<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    
    


  <LinearLayout
      android:id="@+id/LinearLayout2"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:background="@drawable/customborder"
      android:padding="10dp"
      android:orientation="vertical">
      
      <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:paddingBottom="40dp" 
        android:orientation="horizontal" >

          <ImageView
              android:layout_width="80dp"
              android:layout_height="100dp"
              android:src="@drawable/logo" />

        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textAllCaps="true"
         android:textSize="17sp"
         android:textColor="@android:color/holo_green_dark"
         android:layout_gravity="center"
         android:text="@string/BdRailWayTitle"
         />
    </LinearLayout>
      
    
      <LinearLayout android:layout_width="fill_parent"
          android:layout_height="50dp"
          android:gravity="center"
          android:orientation="horizontal">
          <TextView
        		android:layout_width="50dp"
        		android:layout_height="wrap_content"
        		android:gravity="left"
        		android:text="@string/email_label"
               />
          <EditText
        		android:id="@+id/editTextUserMail"
        		android:layout_width="160dp"
        		android:layout_height="wrap_content"
        		android:hint="@string/email_hint_text"
        		android:gravity="center"
        		android:layout_gravity="left"
        		android:textSize="12sp"
        		android:fontFamily="arial"
        		android:inputType="textEmailAddress" >
<!--         <requestFocus android:layout_width="wrap_content" /> -->
         </EditText>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
          android:layout_height="50dp"
          android:gravity="center"
          android:orientation="horizontal">
        <TextView
        		android:layout_width="70dp"
        		android:layout_height="wrap_content"
        		android:gravity="left"
        		android:text="@string/password_label"
               />
       <EditText
        		android:id="@+id/editTextPassword"
        		android:layout_width="160dp"
        		android:layout_height="wrap_content"
        		android:hint="@string/password_hint_text"
        		android:textSize="12sp"
        		android:fontFamily="arial"
        		android:gravity="center"
        		android:layout_gravity="right"
        		android:inputType="textPassword" >
           
       </EditText>    
     </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:gravity="center" 
        android:orientation="horizontal" >
        <ImageView
         android:id="@+id/imageViewCaptchaString"
         android:layout_width="80dp"
         android:layout_height="70dp"
         android:src="@drawable/ic_launcher"  
         android:layout_gravity="left"
         android:contentDescription="@string/todo"
         />

    <EditText
         android:id="@+id/editTextCaptchaString"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:gravity="center"
         android:layout_gravity="right"
         android:inputType="text" >
        <requestFocus />
    </EditText>
        
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:onClick="doLogin"
        android:text="@string/log_in_button" />    

</LinearLayout>

</RelativeLayout>
