<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DashboardActivity" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonLogin"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/train_route" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:layout_toRightOf="@+id/button3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="19dp"
        android:text="@string/purchase_ticket" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentRight="true"
        android:text="@string/fair_query" />

    <Spinner
        android:id="@+id/spinnerFromStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp" />

    <Spinner
        android:id="@+id/spinnerToStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerFromStation"
        android:layout_below="@+id/spinnerFromStation" 
        />

    <Spinner
        android:id="@+id/spinnerJourneyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerFromStation"
        android:layout_alignParentTop="true"
        tools:listitem="@android:layout/simple_spinner_dropdown_item" />

    <Spinner
        android:id="@+id/spinnerSeatClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerToStation"
        android:layout_below="@+id/spinnerToStation" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerSeatClass"
        android:layout_below="@+id/spinnerSeatClass"
        android:onClick="doSearch"
        android:text="Button" />    

    <WebView
        android:id="@+id/webViewAd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"        
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_below="@+id/button2" />

</RelativeLayout>
